Fixed alignment for "Are you a resident" radio options

--- a/_sass/pages/scholarships.scss
+++ b/_sass/pages/scholarships.scss
@@ -59,8 +59,8 @@
   position: absolute;
   top: var(--sp-md);
   left: 0;
-  height: var(--sp-xxl);
-  width: var(--sp-xxl);
+  height: var(--fs-xxl);
+  width: var(--fs-xxl);
   background-color: var(--base-100);
   outline: 6px solid var(--brand);
   border-radius: 50%;
